[package]
name = "dirty-dns"
version = "0.1.0"
authors = ["__JM_Joy__ <918734043@qq.com>"]
edition = "2018"
description = "A simple and dirty dns server support match regex query name, get ip by execute command, etc."
repository = "https://github.com/jmjoy/dirty-dns"
license-file = "LICENSE"
readme = "README.md"
keywords = [
    "rust",
    "dns",
    "dns-server",
    "regex",
]
exclude = [
    ".gitignore",
    ".travis.yml",
    "rustfmt.toml",
    "config.toml",
    "config.example.toml",
    "config.test.toml",
]

[dependencies]
toml = {version = "0.5.1", features = ["preserve_order"]}
clap = "2.33.0"
regex = "1.2.0"
serde_derive = "1.0.98"
serde = "1.0.98"
num_cpus = "1.10.1"

